chore: modify npm script

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "batch-modify-md": "node commands/batch-modify-md.js",
     "batch-scan-md": "node commands/batch-scan-md.js",
-    "dev-generate-data": "node commands/generate-data.js --continuous-watch",
+    "init": "npm install && cd build-static-html && npm install",
+    "generate-data-continuous": "node commands/generate-data.js --continuous-watch",
     "generate-data": "node commands/generate-data.js",
-    "dev": "cd build-static-html && npm install && npx vite serve",
-    "build": "cd build-static-html && npm install && npx vite build",
+    "serve": "cd build-static-html && npm run dev",
+    "preview": "npm run generate-data && cd build-static-html && npm run build && npm run preview",
+    "deploy": "npm run generate-data && cd build-static-html && npm run build",
     "try-parallel-run(still-not-succeed)": "test-parallel-run.js"
   },
   "keywords": [],
