--- a/.github/workflows/auto_deploy_github_pages.yml
+++ b/.github/workflows/auto_deploy_github_pages.yml
@@ -38,9 +38,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-      - run: npm run generate-data --if-present
-      - run: npm run build --if-present
+      - run: npm run init --if-present
+      - run: npm run deploy --if-present
       # - run: npm test
       - name: Setup Pages
         uses: actions/configure-pages@v5
