--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "create-post": "node scripts/create-post.js",
     "clear-useless-assets": "node scripts/clear-useless-assets.js",
     "batch-modify-md": "node scripts/batch-modify-md.js",
     "batch-scan-md": "node scripts/batch-scan-md.js",
@@ -16,6 +17,7 @@
     "deploy": "npm run generate-data && cd build-static-html && npm run build"
   },
   "scriptsComments": {
+    "create-post": "新建文章",
     "clear-useless-assets": "寻找在 markdown 中引用但不存在的图片并提出警告；寻找未使用的图片并自动删除",
     "batch-modify-md": "[调试用]批量修改 md 的内容，把修改后的内容输出到另一文件夹中",
     "batch-scan-md": "[调试用]批量搜索 md 的内容",
