--- a/build-static-html/package.json
+++ b/build-static-html/package.json
@@ -15,7 +15,11 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^9.9.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "globals": "^15.9.0",
     "sass": "^1.77.7",
     "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.3"
