ci: node use lts version in github workflow

--- a/.github/workflows/auto_deploy_github_pages.yml
+++ b/.github/workflows/auto_deploy_github_pages.yml
@@ -25,18 +25,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js lts version
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: lts/*
           cache: "npm"
       - run: npm run init --if-present
       - run: npm run deploy --if-present
